gh-4610 Added compaction after purge, WIP on OffHeapStoreInfo